# seiza-win

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  README.md  Seiza.slnx
.github/scripts/: test-windows-installer.ps1
.github/workflows/: ci.yml
docs/: ABI.md  ARCHITECTURE.md  FEATURE_PARITY.md
docs/releases/: v0.1.0.md
packaging/windows/: License.rtf  Product.wxs  README.md  Seiza.App.wixproj
rust/seiza-cabi/: Cargo.toml
rust/seiza-cabi-pin/: Cargo.toml
rust/seiza-cabi-pin/src/: lib.rs
rust/seiza-cabi/include/: seiza_cabi.h
rust/seiza-cabi/src/: lib.rs
scripts/: build-rust.ps1
src/Seiza.App/: AboutDialog.xaml  AboutDialog.xaml.cs  App.xaml  App.xaml.cs  CatalogSettingsWindow.xaml  CatalogSettingsWindow.xaml.cs  FitsStretchWindow.xaml  FitsStretchWindow.xaml.cs  HistogramPlot.xaml  HistogramPlot.xaml.cs  ImageInspector.xaml  ImageInspector.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Seiza.App.csproj  app.manifest
src/Seiza.App/Interop/: NativeMethods.cs  SafeRenderedImageHandle.cs
src/Seiza.App/Models/: CatalogSetupProgress.cs  CatalogStatus.cs  FitsStretch.cs  ImageMetadata.cs  InspectorEntry.cs  RenderedImageData.cs  RgbStretchMode.cs  SeizaJsonSerializerContext.cs  SolveResult.cs
src/Seiza.App/Properties/: launchSettings.json
src/Seiza.App/Rendering/: OverlayOptions.cs  SolveOverlayRenderer.cs
src/Seiza.App/Services/: CatalogDirectoryPicker.cs  CatalogSettingsStore.cs  ClipboardService.cs  ImageExportService.cs  ImageFileService.cs  ImageRenderService.cs  (+7 more)
(+3 files in other folders)
