[package]
name = "seiza-cabi"
version = "0.11.2"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seiza = { version = "0.11.2", features = ["downloads"] }
seiza-fits = "0.1.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "rt", "time"] }

[dev-dependencies]
tempfile = "3"
